--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Copyright 2021 Adam Chalkley
+#
+# https://github.com/atc0005/check-vmware
+#
+# Licensed under the MIT License. See LICENSE file in the project root for
+# full license information.
+
+
 /.vscode
 /check_vmware_tools
 /scratch
