Add GitHub Actions Workflows
This is the same set of GHAWs used for other projects that I
maintain, with very minor tweaks to fit this project.

Linting issues exposed by this commit (and upcoming PR) will
be resolved "soon".

refs GH-12

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@
 # full license information.
 
 
+# Ignore Visual Studio Code workspace-level settings
 /.vscode
+
+# Ignore local "scratch" directory of temporary files
+scratch/
+
+# Ignore local builds
+/release_assets
+
+# Ignore one-off CLI app builds
 /check_vmware_tools
-/scratch
