Update build steps to include current plugins
The vCPUs plugin was missing from:

- Makefile
- GHAW

This commit updates both to include the missing entry.

--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -83,3 +83,4 @@ jobs:
       - name: Build using vendored dependencies
         run: |
           go build -v -mod=vendor ./cmd/check_vmware_tools
+          go build -v -mod=vendor ./cmd/check_vmware_vcpus
