--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -86,3 +86,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_vcpus
           go build -v -mod=vendor ./cmd/check_vmware_vhw
           go build -v -mod=vendor ./cmd/check_vmware_hs2ds2vms
+          go build -v -mod=vendor ./cmd/check_vmware_datastore
