--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -87,3 +87,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_vhw
           go build -v -mod=vendor ./cmd/check_vmware_hs2ds2vms
           go build -v -mod=vendor ./cmd/check_vmware_datastore
+          go build -v -mod=vendor ./cmd/check_vmware_snapshots_age
