--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -88,3 +88,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_hs2ds2vms
           go build -v -mod=vendor ./cmd/check_vmware_datastore
           go build -v -mod=vendor ./cmd/check_vmware_snapshots_age
+          go build -v -mod=vendor ./cmd/check_vmware_snapshots_size
