Add initial draft of RP memory usage plugin
As with several other plugins in this project, this one borrows
heavily from existing projects. In particular, this plugin was
initially based on a PowerShell / PowerCLI plugin I wrote in 2019.

In short, this plugin monitors the memory usage for all specified
Resource Pools. VirtualMachines are not directly evaluated, whether in
a Resource Pool or outside of one. Resource Pools can be explicitly
*included* or *excluded*.

Doc updates have been applied, example usage has been added, including
a command definition "contrib" file illustrating how the plugin would
be referenced within a production Nagios configuration.

refs GH-5

--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -89,3 +89,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_datastore
           go build -v -mod=vendor ./cmd/check_vmware_snapshots_age
           go build -v -mod=vendor ./cmd/check_vmware_snapshots_size
+          go build -v -mod=vendor ./cmd/check_vmware_rps_memory
