Add initial draft of snapshots count plugin
As with several other plugins in this project, this one borrows
heavily from existing projects. In particular, this plugin is based
heavily on the snapshots age and size plugins. Small adjustments were
made to shared code in order to support the new plugin.

In short, this plugin monitors the snapshots count per Virtual Machine
for all specified Resource Pools. As with the snapshots age and size
plugins, Resource Pools can be explicitly included or excluded and
individual Virtual Machines can be ignored/excluded from evaluation.

Doc updates have been applied, example usage has been added, including
a command definition "contrib" file illustrating how the plugin would
be referenced within a production Nagios configuration.

refs GH-66

--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -88,5 +88,6 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_hs2ds2vms
           go build -v -mod=vendor ./cmd/check_vmware_datastore
           go build -v -mod=vendor ./cmd/check_vmware_snapshots_age
+          go build -v -mod=vendor ./cmd/check_vmware_snapshots_count
           go build -v -mod=vendor ./cmd/check_vmware_snapshots_size
           go build -v -mod=vendor ./cmd/check_vmware_rps_memory
