--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -51,6 +51,20 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
+    service_description     VMware Snapshots - Count
+    servicegroups           vmware-checks, vmware-snapshot-checks
+    check_command           check_vmware_snapshots_count_include_pools_exclude_vms!example!vc1-read-only-service-account!$USER13$!4!25!"Desktops", "Server Support"!RHEL7-TEST
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Warning threshold in snapshots count (e.g., 4)
+    # Argument 5: Critical threshold in snapshots count (e.g., 25 of 32 max)
+    # Argument 6: Comma-separated list of VMs (full names) that are to be ignored
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
     service_description     VMware Snapshots - Size
     servicegroups           vmware-checks, vmware-snapshot-checks
     check_command           check_vmware_snapshots_size_include_pools!example!vc1-read-only-service-account!$USER13$!30!50!"Desktops", "Server Support"
