--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,6 @@ scratch/
 /check_vmware_hs2ds2vms
 /check_vmware_datastore
 /check_vmware_snapshots_age
+/check_vmware_snapshots_count
 /check_vmware_snapshots_size
 /check_vmware_rps_memory
