Add initial draft of host memory monitoring plugin
As with several other plugins in this project, this one borrows
heavily from existing projects. In particular, this plugin is based
heavily on the datastore usage plugin while borrowing elements from
other recent plugins. Small adjustments were made to shared code in
order to support the new plugin.

In short, this plugin monitors the memory use on a specified host.
This plugin also reports which powered on and powered off VMs are
attached to the host along with the memory consumed by each, including
the overall percentage of the host's memory.

Doc updates have been applied, example usage has been added, including
a command definition "contrib" file illustrating how the plugin would
be referenced within a production Nagios configuration.

refs GH-7

--- a/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
+++ b/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
@@ -53,3 +53,8 @@ define servicegroup{
     servicegroup_name   vmware-hs2ds2vms-checks
     alias               VMware Host-Datastore-VMs Pairing Checks
     }
+
+define servicegroup{
+    servicegroup_name   vmware-host-checks
+    alias               VMware Host Checks
+    }
