--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -119,12 +119,6 @@ define service{
     host_name               vc1.exmaple.com
     service_description     VMware Resource Pools
     servicegroups           vmware-checks, vmware-resource-pool-checks
-    # Virtual machine hosts have a hidden resource pool named 'Resources',
-    # which is a parent of all resource pools of the host. This pool throws
-    # off our calculations, so we explicitly ignore it in the script logic
-    # itself. Because of that, we do NOT have to list it here.
-    # https://code.vmware.com/docs/9638/cmdlet-reference/doc/Get-ResourcePool.html
-    # https://pubs.vmware.com/vsphere-51/topic/com.vmware.powercli.cmdletref.doc/Get-ResourcePool.html
     check_command           check_vmware_resource_pools_include_pools!example!vc1-read-only-service-account!$USER13$!97!99!320!"Desktops", "Server Support"
     # Argument 1: User Domain
     # Argument 2: Service Account username
@@ -133,6 +127,45 @@ define service{
     # Argument 5: Critical memory threshold in percentage, given as whole number
     # Argument 6: Maximum Memory allowed for our use based on leased Virtual Resource Units (VRUs), given as a whole number
     # Argument 7: Comma-separated list of Resource Pools (full names) that are to be evaluated (all others ignored)
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Host Memory - esxi1
+    servicegroups           vmware-checks, vmware-host-checks
+    check_command           check_vmware_host_memory!example!vc1-read-only-service-account!$USER13$!97!99!esx1.example.com
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Warning memory threshold in percentage, given as whole number
+    # Argument 5: Critical memory threshold in percentage, given as whole number
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Host Memory - esxi2
+    servicegroups           vmware-checks, vmware-host-checks
+    check_command           check_vmware_host_memory!example!vc1-read-only-service-account!$USER13$!97!99!esx2.example.com
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Warning memory threshold in percentage, given as whole number
+    # Argument 5: Critical memory threshold in percentage, given as whole number
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Host Memory - esxi3
+    servicegroups           vmware-checks, vmware-host-checks
+    check_command           check_vmware_host_memory!example!vc1-read-only-service-account!$USER13$!97!99!esx3.example.com
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Warning memory threshold in percentage, given as whole number
+    # Argument 5: Critical memory threshold in percentage, given as whole number
     }
 
 define service{
