--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -91,3 +91,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_snapshots_count
           go build -v -mod=vendor ./cmd/check_vmware_snapshots_size
           go build -v -mod=vendor ./cmd/check_vmware_rps_memory
+          go build -v -mod=vendor ./cmd/check_vmware_host_memory
