Add initial draft of host cpu monitoring plugin
This plugin is based heavily on the existing host memory monitoring
plugin. Small adjustments were made to shared code in
order to support the new plugin.

In short, this plugin monitors the CPU usage on a specified host.
This plugin also reports which powered on and powered off VMs are
attached to the host along with the CPU consumed by each, including
the overall percentage of the host's CPU capacity.

Doc updates have been applied, example usage has been added, including
a command definition "contrib" file illustrating how the plugin would
be referenced within a production Nagios configuration.

refs GH-13

--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -92,3 +92,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_snapshots_size
           go build -v -mod=vendor ./cmd/check_vmware_rps_memory
           go build -v -mod=vendor ./cmd/check_vmware_host_memory
+          go build -v -mod=vendor ./cmd/check_vmware_host_cpu
