--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -171,6 +171,45 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
+    service_description     VMware Host CPU - esxi1
+    servicegroups           vmware-checks, vmware-host-checks
+    check_command           check_vmware_host_cpu!example!vc1-read-only-service-account!$USER13$!87!95!esx1.example.com
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Warning CPU threshold in percentage, given as whole number
+    # Argument 5: Critical CPU threshold in percentage, given as whole number
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Host CPU - esxi2
+    servicegroups           vmware-checks, vmware-host-checks
+    check_command           check_vmware_host_cpu!example!vc1-read-only-service-account!$USER13$!87!95!esx2.example.com
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Warning CPU threshold in percentage, given as whole number
+    # Argument 5: Critical CPU threshold in percentage, given as whole number
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Host CPU - esxi3
+    servicegroups           vmware-checks, vmware-host-checks
+    check_command           check_vmware_host_cpu!example!vc1-read-only-service-account!$USER13$!87!95!esx3.example.com
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Warning CPU threshold in percentage, given as whole number
+    # Argument 5: Critical CPU threshold in percentage, given as whole number
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
     service_description     VMware Datastore - HUSVM-DC1-vol6
     servicegroups           vmware-checks, vmware-datastore-checks
     check_command           check_vmware_datastore!example!vc1-read-only-service-account!$USER13$!90!95!HUSVM-DC1-vol6
