--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -93,3 +93,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_rps_memory
           go build -v -mod=vendor ./cmd/check_vmware_host_memory
           go build -v -mod=vendor ./cmd/check_vmware_host_cpu
+          go build -v -mod=vendor ./cmd/check_vmware_vm_power_uptime
