Extend check vhw plugin to support default version
Add additional plugin monitoring mode which asserts that virtual
hardware versions for evaluated VMs match or exceed the default
virtual hardware version. The default virtual hardware version
is specified at the host level (if chosen via CLI flag) or
cluster (if chosen via CLI flag, or if host not specified).

Other changes:

- Doc updates, including CLI examples and descriptions of
  supported monitoring modes
- Contrib command definition updates
- Misc bug fixes
  - Missing plugin "type" in log messages due to missing
    constant/check in logging setup
  - Fix invalid preallocaction of vhw slices used by
    `Oldest` and `Newest` `HardwareVersionsIndex` methods

refs GH-130
refs GH-145
refs GH-33

--- a/contrib/nagios/etc/nagios-plugins/config/vmware-virtual-hardware.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-virtual-hardware.cfg
@@ -74,6 +74,7 @@ define command{
     }
 
 
+
 ######################################
 # Minimum required version check
 ######################################
@@ -105,4 +106,39 @@ define command{
 define command{
     command_name    check_vmware_vhw_minreq_exclude_vms
     command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
+    }
+
+
+
+######################################
+# Default is minimum required version check
+######################################
+
+
+# Look at specific pools only, do not evaluate any VMs that are powered off.
+define command{
+    command_name    check_vmware_vhw_defreq_include_pools
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --include-rp '$ARG5$' --default-is-min-version --trust-cert --log-level info
+    }
+
+# Look at specific pools only, exclude list of VMs, do not evaluate any VMs
+# that are powered off.
+define command{
+    command_name    check_vmware_vhw_defreq_include_pools_exclude_vms
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --include-rp '$ARG5$' --ignore-vm '$ARG6$' --default-is-min-version --trust-cert --log-level info
+    }
+
+# Look at all pools, all VMs, do not evaluate any VMs that are powered off.
+# This variation of the command is most useful for environments where all VMs
+# are monitored equally.
+define command{
+    command_name    check_vmware_vhw_defreq
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --default-is-min-version --trust-cert --log-level info
+    }
+
+# Look at all pools, exclude list of VMs, do not evaluate any VMs that are
+# powered off.
+define command{
+    command_name    check_vmware_vhw_defreq_exclude_vms
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --ignore-vm '$ARG5$' --default-is-min-version --trust-cert --log-level info
     }
