Extend check vhw plugin to support alt modes
Add additional plugin monitoring modes alongside
the existing plugin monitoring mode, bringing the
total to three:

- minimum required version check
- outdated-by or threshold range check
- homogeneous version check

Other changes:

- Extend command definitions file to represent all three
  monitoring modes
- Doc updates, including CLI examples and descriptions of
  supported monitoring modes

refs GH-33

--- a/contrib/nagios/etc/nagios-plugins/config/vmware-virtual-hardware.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-virtual-hardware.cfg
@@ -5,17 +5,21 @@
 # Licensed under the MIT License. See LICENSE file in the project root for
 # full license information.
 
+######################################
+# Homogeneous version check
+######################################
+
 
 # Look at specific pools only, do not evaluate any VMs that are powered off.
 define command{
-    command_name    check_vmware_vhw_include_pools
+    command_name    check_vmware_vhw_homogeneous_include_pools
     command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at specific pools only, exclude list of VMs, do not evaluate any VMs
 # that are powered off.
 define command{
-    command_name    check_vmware_vhw_include_pools_exclude_vms
+    command_name    check_vmware_vhw_homogeneous_include_pools_exclude_vms
     command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
     }
 
@@ -23,13 +27,82 @@ define command{
 # This variation of the command is most useful for environments where all VMs
 # are monitored equally.
 define command{
-    command_name    check_vmware_vhw
+    command_name    check_vmware_vhw_homogeneous
     command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs, do not evaluate any VMs that are
 # powered off.
 define command{
-    command_name    check_vmware_vhw_exclude_vms
+    command_name    check_vmware_vhw_homogeneous_exclude_vms
     command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ignore-vm '$ARG4$' --trust-cert --log-level info
+    }
+
+
+
+######################################
+# Outdated-by or threshold range check
+######################################
+
+
+# Look at specific pools only, do not evaluate any VMs that are powered off.
+define command{
+    command_name    check_vmware_vhw_thresholds_include_pools
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --include-rp '$ARG6$' --trust-cert --log-level info
+    }
+
+# Look at specific pools only, exclude list of VMs, do not evaluate any VMs
+# that are powered off.
+define command{
+    command_name    check_vmware_vhw_thresholds_include_pools_exclude_vms
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --include-rp '$ARG6$' --ignore-vm '$ARG7$' --trust-cert --log-level info
+    }
+
+# Look at all pools, all VMs, do not evaluate any VMs that are powered off.
+# This variation of the command is most useful for environments where all VMs
+# are monitored equally.
+define command{
+    command_name    check_vmware_vhw_thresholds
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --trust-cert --log-level info
+    }
+
+# Look at all pools, exclude list of VMs, do not evaluate any VMs that are
+# powered off.
+define command{
+    command_name    check_vmware_vhw_thresholds_exclude_vms
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --ignore-vm '$ARG6$' --trust-cert --log-level info
+    }
+
+
+######################################
+# Minimum required version check
+######################################
+
+
+# Look at specific pools only, do not evaluate any VMs that are powered off.
+define command{
+    command_name    check_vmware_vhw_minreq_include_pools
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --include-rp '$ARG5$' --trust-cert --log-level info
+    }
+
+# Look at specific pools only, exclude list of VMs, do not evaluate any VMs
+# that are powered off.
+define command{
+    command_name    check_vmware_vhw_minreq_include_pools_exclude_vms
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --include-rp '$ARG5$' --ignore-vm '$ARG6$' --trust-cert --log-level info
+    }
+
+# Look at all pools, all VMs, do not evaluate any VMs that are powered off.
+# This variation of the command is most useful for environments where all VMs
+# are monitored equally.
+define command{
+    command_name    check_vmware_vhw_minreq
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --trust-cert --log-level info
+    }
+
+# Look at all pools, exclude list of VMs, do not evaluate any VMs that are
+# powered off.
+define command{
+    command_name    check_vmware_vhw_minreq_exclude_vms
+    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
     }
