Add initial draft of disk consolidation plugin
In short, this plugin monitors the disk consolidation status
for evaluated Virtual Machines.

In order to reuse an existing constant for this plugin, that
constant's text has been tweaked slightly to be more generic.
This affects the Long Service Output for the existing virtual
hardware plugin. The change is minor, but worth mentioning.

Doc updates have been applied, example usage has been added,
including a command definition "contrib" file illustrating how
the plugin would be referenced within a production Nagios
configuration.

refs GH-172

--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -94,3 +94,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_host_memory
           go build -v -mod=vendor ./cmd/check_vmware_host_cpu
           go build -v -mod=vendor ./cmd/check_vmware_vm_power_uptime
+          go build -v -mod=vendor ./cmd/check_vmware_vm_disk_consolidation
