--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -333,6 +333,18 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
+    service_description     VMware VMs - Disk Consolidation
+    servicegroups           vmware-checks, vmware-uptime-checks
+    check_command           check_vmware_vm_disk_consolidation_include_pools!example!vc1-read-only-service-account!$USER13$!"Desktops", "Server Support"
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Comma-separated list of Resource Pools (full names) that are to be evaluated (all others ignored)
+    }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
     service_description     VMware VMs - Power Cycle Uptime
     servicegroups           vmware-checks, vmware-uptime-checks
     check_command           check_vmware_vm_power_uptime_include_pools!example!vc1-read-only-service-account!$USER13$!60!90!"Desktops", "Server Support"
