--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -95,3 +95,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_host_cpu
           go build -v -mod=vendor ./cmd/check_vmware_vm_power_uptime
           go build -v -mod=vendor ./cmd/check_vmware_disk_consolidation
+          go build -v -mod=vendor ./cmd/check_vmware_question
