Fix disk consolidation contrib example
I meant to include these changes as part of GH-183 and
the v0.14.0 release.

While the service check would function, adding it to
the "VMware Uptime Checks" service group wouldn't make
a lot of sense.

--- a/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
+++ b/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
@@ -63,3 +63,8 @@ define servicegroup{
     servicegroup_name   vmware-uptime-checks
     alias               VMware Uptime Checks
     }
+
+define servicegroup{
+    servicegroup_name   vmware-disk-checks
+    alias               VMware Disk Checks
+    }
