--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -333,8 +333,8 @@ define service{
 define service{
     use                     vmware-vsphere-service
     host_name               vc1.exmaple.com
-    service_description     VMware VMs - Disk Consolidation
-    servicegroups           vmware-checks, vmware-uptime-checks
+    service_description     VMware Disk Consolidation
+    servicegroups           vmware-checks, vmware-disk-checks
     check_command           check_vmware_disk_consolidation_include_pools!example!vc1-read-only-service-account!$USER13$!"Desktops", "Server Support"
     # Argument 1: User Domain
     # Argument 2: Service Account username
