Add contrib service group and service check
Missing items for the v0.15.0 release.

refs GH-191
refs GH-43

--- a/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
+++ b/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
@@ -68,3 +68,8 @@ define servicegroup{
     servicegroup_name   vmware-disk-checks
     alias               VMware Disk Checks
     }
+
+define servicegroup{
+    servicegroup_name   vmware-availability-checks
+    alias               VMware Availability Checks
+    }
