--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -355,3 +355,15 @@ define service{
     # Argument 5: Critical threshold in days
     # Argument 6: Comma-separated list of Resource Pools (full names) that are to be evaluated (all others ignored)
     }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Interactive Question
+    servicegroups           vmware-checks, vmware-availability-checks
+    check_command           check_vmware_question_include_pools!example!vc1-read-only-service-account!$USER13$!"Desktops", "Server Support"
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    # Argument 4: Comma-separated list of Resource Pools (full names) that are to be evaluated (all others ignored)
+    }
