--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,9 +25,16 @@ linters:
     - goimports
     - golint
     - gosec
-    - maligned
     - misspell
     - prealloc
-    - scopelint
+    - exportloopref
     - stylecheck
     - unconvert
+
+  disable:
+    - maligned
+
+linters-settings:
+  govet:
+    enable:
+      - fieldalignment
