Add initial draft of triggered alarms plugin
This plugin monitors one or more datacenters for Triggered Alarms.
These alarms can be explicitly *included* or *excluded* based on
Acknowledged status or the Managed Entity type (e.g., `Datastore`,
`VirtualMachine`). Future enhancements are planned to expand
filtering capabilities.

Doc updates have been applied, example usage has been added,
including a command definition "contrib" file illustrating how
the plugin would be referenced within a production Nagios
configuration.

refs GH-171
refs GH-220

--- a/.github/workflows/lint-and-build-code.yml
+++ b/.github/workflows/lint-and-build-code.yml
@@ -96,3 +96,4 @@ jobs:
           go build -v -mod=vendor ./cmd/check_vmware_vm_power_uptime
           go build -v -mod=vendor ./cmd/check_vmware_disk_consolidation
           go build -v -mod=vendor ./cmd/check_vmware_question
+          go build -v -mod=vendor ./cmd/check_vmware_alarms
