contrib | Add service check for alarms plugin
Add missing example to illustrate usage of new plugin.

refs GH-226

--- a/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
+++ b/contrib/nagios/etc/nagios3/conf/groups/service-groups.cfg
@@ -73,3 +73,8 @@ define servicegroup{
     servicegroup_name   vmware-availability-checks
     alias               VMware Availability Checks
     }
+
+define servicegroup{
+    servicegroup_name   vmware-alarm-checks
+    alias               VMware Alarm Checks
+    }
