--- a/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
+++ b/contrib/nagios/etc/nagios3/conf/hosts/servers/vc1.example.com.cfg
@@ -367,3 +367,14 @@ define service{
     # Argument 3: Service Account password (see resource.cfg)
     # Argument 4: Comma-separated list of Resource Pools (full names) that are to be evaluated (all others ignored)
     }
+
+define service{
+    use                     vmware-vsphere-service
+    host_name               vc1.exmaple.com
+    service_description     VMware Triggered Alarms - All
+    servicegroups           vmware-checks, vmware-alarm-checks
+    check_command           check_vmware_alarms!example!vc1-read-only-service-account!$USER13$
+    # Argument 1: User Domain
+    # Argument 2: Service Account username
+    # Argument 3: Service Account password (see resource.cfg)
+    }
