Triggered Alarms | Allow 1+ DCs, fail on missing
The initial plugin release was intended to support retrieving
triggered alarms from a user-specified datacenter or if not
specified, from all datacenters. Unfortunately the initial
plugin release did not properly filter triggered alarms to the
user-specified datacenter. Regardless of whether the user
specified a datacenter all datacenters were evaluated.

This commit adds support for specifying one or more datacenters
and filters accordingly. Additionally, this commit *also*
reverses the decision to fallback to the default datacenter
if the specified list is not found and instead considers
any missing requested datacenter names as a CRITICAL error.

Lastly, this commit includes various debug logging tweaks
and minor adjustments to the Long Service Output shown
as "extended output" for the check results. These adjustments
focus on exposing which datacenters were requested, which
were evaluated and which contain triggered alarms.

refs GH-230

--- a/contrib/nagios/etc/nagios-plugins/config/vmware-alarms.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-alarms.cfg
@@ -68,40 +68,37 @@ define command{
 
 
 ############################################################################
-# Use specified datacenter, fall back to default datacenter if not found
+# Use specified datacenter(s) only
 ############################################################################
 
 # Look at triggered alarms for all managed object types (e.g., Datastore and
-# VirtualMachine) only, within specified datacenter, fallback to default
-# datacenter if not found. Do not evaluate any triggered alarms which have
-# been previously acknowledged.
+# VirtualMachine) only, within specified datacenters only. Do not evaluate any
+# triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --dc-name '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms for all managed object types (e.g., Datastore and
-# VirtualMachine) only, within specified datacenter, fallback to default
-# datacenter if not found. Evaluate any triggered alarms which have been
-# previously acknowledged.
+# VirtualMachine) only, within specified datacenters only. Evaluate any
+# triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc_eval_acknowledged
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --dc-name '$ARG4$' --eval-acknowledged --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
-# and VirtualMachine) only, within specified datacenter, fallback to default
-# datacenter if not found. Do not evaluate any triggered alarms which have
-# been previously acknowledged.
+# and VirtualMachine) only, within specified datacenters only. Do not evaluate
+# any triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc_include_types
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4' --dc-name '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at triggered alarms for specified managed object types (e.g., Datastore
-# and VirtualMachine) only, within specified datacenter, fallback to default
-# datacenter if not found. Evaluate any triggered alarms which have been
-# previously acknowledged, but not yet resolved.
+# and VirtualMachine) only, within specified datacenters only. Evaluate any
+# triggered alarms which have been previously acknowledged, but not yet
+# resolved.
 define command{
     command_name    check_vmware_alarms_specific_dc_include_types_eval_acknowledged
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-type '$ARG4' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
@@ -109,9 +106,8 @@ define command{
 
 # Look at triggered alarms associated with managed objects which do not match
 # the specified list of managed object types (e.g., Datastore and
-# VirtualMachine) within specified datacenter, fallback to default datacenter
-# if not found.Do not evaluate any triggered alarms which have been previously
-# acknowledged.
+# VirtualMachine) within specified datacenters only. Do not evaluate any
+# triggered alarms which have been previously acknowledged.
 define command{
     command_name    check_vmware_alarms_specific_dc_exclude_types
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4' --dc-name '$ARG5$' --trust-cert --log-level info
@@ -119,9 +115,8 @@ define command{
 
 # Look at triggered alarms associated with managed objects which do not match
 # the specified list of managed object types (e.g., Datastore and
-# VirtualMachine) within specified datacenter, fallback to default datacenter
-# if not found. Evaluate any triggered alarms which have been previously
-# acknowledged, but not yet resolved.
+# VirtualMachine) within specified datacenters only. Evaluate any triggered
+# alarms which have been previously acknowledged, but not yet resolved.
 define command{
     command_name    check_vmware_alarms_specific_dc_exclude_types_eval_acknowledged
     command_line    /usr/lib/nagios/plugins/check_vmware_alarms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --exclude-type '$ARG4' --dc-name '$ARG5$' --eval-acknowledged --trust-cert --log-level info
